fix image on DB
