# e-shop/apps/product-service/src/swagger-output.json
@@ -148,6 +148,16 @@
         }
       }
     },
+    "/upload-image": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/{get-product-categories{where{id}}": {
       "delete": {
         "description": "",
